[gd_scene load_steps=4 format=3 uid="uid://cnnifqydayh65"]

[ext_resource type="Texture2D" uid="uid://bipc5v1bbvy0" path="res://assets/UI/button/cardButton.png" id="1_wdtsj"]
[ext_resource type="Script" path="res://script/Card.gd" id="1_x5ewt"]
[ext_resource type="LabelSettings" uid="uid://bapxcv21f0nsf" path="res://rescourse/blackFont.tres" id="3_r1yrn"]

[node name="Card" type="Control"]
layout_mode = 3
anchors_preset = 0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 10

[node name="CardButton1" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("1_wdtsj")
script = ExtResource("1_x5ewt")

[node name="CardName" type="Label" parent="HBoxContainer/CardButton1"]
layout_mode = 0
offset_left = 5.0
offset_top = 10.0
offset_right = 55.0
offset_bottom = 33.0
label_settings = ExtResource("3_r1yrn")

[node name="CardPrice" type="Label" parent="HBoxContainer/CardButton1"]
layout_mode = 0
offset_left = 5.0
offset_top = 54.0
offset_right = 55.0
offset_bottom = 77.0
label_settings = ExtResource("3_r1yrn")

[node name="CardButton2" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("1_wdtsj")
script = ExtResource("1_x5ewt")

[node name="CardName" type="Label" parent="HBoxContainer/CardButton2"]
layout_mode = 0
offset_left = 5.0
offset_top = 10.0
offset_right = 55.0
offset_bottom = 33.0
label_settings = ExtResource("3_r1yrn")

[node name="CardPrice" type="Label" parent="HBoxContainer/CardButton2"]
layout_mode = 0
offset_left = 5.0
offset_top = 54.0
offset_right = 55.0
offset_bottom = 77.0
label_settings = ExtResource("3_r1yrn")

[node name="CardButton3" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("1_wdtsj")
script = ExtResource("1_x5ewt")

[node name="CardName" type="Label" parent="HBoxContainer/CardButton3"]
layout_mode = 0
offset_left = 5.0
offset_top = 10.0
offset_right = 55.0
offset_bottom = 33.0
label_settings = ExtResource("3_r1yrn")

[node name="CardPrice" type="Label" parent="HBoxContainer/CardButton3"]
layout_mode = 0
offset_left = 5.0
offset_top = 54.0
offset_right = 55.0
offset_bottom = 77.0
label_settings = ExtResource("3_r1yrn")

[node name="CardButton4" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("1_wdtsj")
script = ExtResource("1_x5ewt")

[node name="CardName" type="Label" parent="HBoxContainer/CardButton4"]
layout_mode = 0
offset_left = 5.0
offset_top = 10.0
offset_right = 55.0
offset_bottom = 33.0
label_settings = ExtResource("3_r1yrn")

[node name="CardPrice" type="Label" parent="HBoxContainer/CardButton4"]
layout_mode = 0
offset_left = 5.0
offset_top = 54.0
offset_right = 55.0
offset_bottom = 77.0
label_settings = ExtResource("3_r1yrn")

[node name="CardButton5" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("1_wdtsj")
script = ExtResource("1_x5ewt")

[node name="CardName" type="Label" parent="HBoxContainer/CardButton5"]
layout_mode = 0
offset_left = 5.0
offset_top = 10.0
offset_right = 55.0
offset_bottom = 33.0
label_settings = ExtResource("3_r1yrn")

[node name="CardPrice" type="Label" parent="HBoxContainer/CardButton5"]
layout_mode = 0
offset_left = 5.0
offset_top = 54.0
offset_right = 55.0
offset_bottom = 77.0
label_settings = ExtResource("3_r1yrn")

[node name="CardButton6" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("1_wdtsj")
script = ExtResource("1_x5ewt")

[node name="CardName" type="Label" parent="HBoxContainer/CardButton6"]
layout_mode = 0
offset_left = 5.0
offset_top = 10.0
offset_right = 55.0
offset_bottom = 33.0
label_settings = ExtResource("3_r1yrn")

[node name="CardPrice" type="Label" parent="HBoxContainer/CardButton6"]
layout_mode = 0
offset_left = 5.0
offset_top = 54.0
offset_right = 55.0
offset_bottom = 77.0
label_settings = ExtResource("3_r1yrn")

[node name="CardButton7" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("1_wdtsj")
script = ExtResource("1_x5ewt")

[node name="CardName" type="Label" parent="HBoxContainer/CardButton7"]
layout_mode = 0
offset_left = 5.0
offset_top = 10.0
offset_right = 55.0
offset_bottom = 33.0
label_settings = ExtResource("3_r1yrn")

[node name="CardPrice" type="Label" parent="HBoxContainer/CardButton7"]
layout_mode = 0
offset_left = 5.0
offset_top = 54.0
offset_right = 55.0
offset_bottom = 77.0
label_settings = ExtResource("3_r1yrn")

[connection signal="pressed" from="HBoxContainer/CardButton1" to="HBoxContainer/CardButton1" method="_on_pressed"]
[connection signal="pressed" from="HBoxContainer/CardButton2" to="HBoxContainer/CardButton2" method="_on_pressed"]
[connection signal="pressed" from="HBoxContainer/CardButton3" to="HBoxContainer/CardButton3" method="_on_pressed"]
[connection signal="pressed" from="HBoxContainer/CardButton4" to="HBoxContainer/CardButton4" method="_on_pressed"]
[connection signal="pressed" from="HBoxContainer/CardButton5" to="HBoxContainer/CardButton5" method="_on_pressed"]
[connection signal="pressed" from="HBoxContainer/CardButton6" to="HBoxContainer/CardButton6" method="_on_pressed"]
[connection signal="pressed" from="HBoxContainer/CardButton7" to="HBoxContainer/CardButton7" method="_on_pressed"]
